--- a/src/Styles/Software.css
+++ b/src/Styles/Software.css
@@ -1,149 +1,146 @@
-.main {
+.software-main {
   overflow: hidden;
+  max-width: 1680px;
 }
-
-.sectionOne {
-  height: 90vh;
+.software-main .sectionOne {
+  padding: 150px 0px;
   display: flex;
   gap: 10px;
   align-items: center;
 }
-.sectionOne > * {
+.software-main .sectionOne > * {
   width: 50%;
 }
-.sectionOne .sub-section-1 {
+.software-main .sectionOne .sub-section-1 {
   padding: 10px 50px;
 }
-.sectionOne .sub-section-1 h1 {
+.software-main .sectionOne .sub-section-1 h1 {
   font-size: 3rem;
 }
-.sectionOne .sub-section-1 h1 span {
+.software-main .sectionOne .sub-section-1 h1 span {
   -webkit-text-fill-color: transparent;
   background: linear-gradient(330.34deg, #72e4ff 25.66%, #439fff 72.47%);
   -webkit-background-clip: text;
 }
-.sectionOne .sub-section-1 > span {
+.software-main .sectionOne .sub-section-1 > span {
   font-size: 1.3rem;
 }
-.sectionOne .sub-section-2 {
+.software-main .sectionOne .sub-section-2 {
   width: 700px;
   position: relative;
 }
-.sectionOne .sub-section-2 > *:first-child {
+.software-main .sectionOne .sub-section-2 > *:first-child {
   margin-bottom: 70px;
 }
-.sectionOne .sub-section-2 > *:nth-last-child(2) {
+.software-main .sectionOne .sub-section-2 > *:nth-last-child(2) {
   left: 50px;
   top: 100px;
   position: absolute;
 }
-.sectionOne .sub-section-2 > *:last-child {
+.software-main .sectionOne .sub-section-2 > *:last-child {
   color: rgba(128, 128, 128, 0.685);
   display: block;
   padding: 30px;
 }
-
-.sectionTwo {
+.software-main .sectionTwo {
   display: flex;
-  height: 60vh;
   overflow: hidden;
 }
-.sectionTwo .sub-section-1 {
+.software-main .sectionTwo .sub-section-1 {
   width: 300px;
   display: flex;
   flex-direction: column;
   padding: 20px;
   gap: 50px;
 }
-.sectionTwo .sub-section-1 .c-1 {
+.software-main .sectionTwo .sub-section-1 .c-1 {
   margin-top: 20px;
   font-size: 1.3rem;
   color: gray;
 }
-.sectionTwo .sub-section-1 .radio-btn {
+.software-main .sectionTwo .sub-section-1 .radio-btn {
   display: flex;
   gap: 10px;
   flex-direction: column;
   font-size: 1.2rem;
 }
-.sectionTwo .sub-section-1 .radio-btn input {
+.software-main .sectionTwo .sub-section-1 .radio-btn input {
   display: none;
+  accent-color: #8b00f8;
 }
-.sectionTwo .sub-section-1 .radio-btn input:checked ~ label {
+.software-main .sectionTwo .sub-section-1 .radio-btn input:checked ~ label {
   color: #8b00f8;
   font-weight: bold;
 }
-.sectionTwo .sub-section-1 .radio-btn > div {
+.software-main .sectionTwo .sub-section-1 .radio-btn > div {
   text-align: right;
   font-size: 1.3rem;
   font-weight: bold;
   color: gray;
 }
-.sectionTwo .sub-section-2 {
+.software-main .sectionTwo .sub-section-2 {
   width: 100%;
   overflow: hidden;
 }
-.sectionTwo .sub-section-2 .slide {
+.software-main .sectionTwo .sub-section-2 .slide {
   display: flex;
   transition: 0.3s ease;
   width: 500%;
   position: relative;
 }
-.sectionTwo .sub-section-2 .slide .data {
+.software-main .sectionTwo .sub-section-2 .slide .data {
   width: 100%;
   display: flex;
   padding: 10px;
 }
-.sectionTwo .sub-section-2 .slide .data h1 {
+.software-main .sectionTwo .sub-section-2 .slide .data h1 {
   margin: 20px 0px;
   color: #8b00f8;
 }
-.sectionTwo .sub-section-2 .slide .data .content {
+.software-main .sectionTwo .sub-section-2 .slide .data .content {
   color: rgba(128, 128, 128, 0.753);
 }
-.sectionTwo .sub-section-2 .slide .data .title {
+.software-main .sectionTwo .sub-section-2 .slide .data .title {
   color: gray;
   margin: 20px 0px;
   font-size: 1.3rem;
 }
-.sectionTwo .sub-section-2 .slide .data ul {
+.software-main .sectionTwo .sub-section-2 .slide .data ul {
   padding: 0px;
   counter-reset: custom;
   list-style-type: none;
 }
-.sectionTwo .sub-section-2 .slide .data ul li {
+.software-main .sectionTwo .sub-section-2 .slide .data ul li {
   width: 100%;
   display: flex;
   align-items: center;
   color: gray;
   counter-increment: custom;
 }
-.sectionTwo .sub-section-2 .slide .data ul li:before {
+.software-main .sectionTwo .sub-section-2 .slide .data ul li:before {
   content: counters(custom, ".") " ";
   width: 30px;
   height: 30px;
   margin-right: 10px;
-  background: purple;
+  background: #8b00f8;
   color: #fff;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.sectionTwo .sub-section-2 .slide .data img {
+.software-main .sectionTwo .sub-section-2 .slide .data img {
   width: 50%;
 }
-
-.sectionThree {
-  height: 87vh;
+.software-main .sectionThree {
   overflow: hidden;
-  padding: 0px 40px;
+  padding: 50px 40px;
   color: gray;
 }
-.sectionThree h1 {
+.software-main .sectionThree h1 {
   margin-top: 50px;
 }
-.sectionThree .main-container {
+.software-main .sectionThree .main-container {
   color: #333333;
   font-weight: 500;
   display: grid;
@@ -152,11 +149,54 @@
   margin-top: 50px;
   gap: 20px 30px;
 }
-.sectionThree .main-container .iconMenu {
+.software-main .sectionThree .main-container .iconMenu {
   display: flex;
   gap: 20px;
   text-align: center;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+@media (max-width: 960px) {
+  .sectionOne .sub-section-1 {
+    width: 100%;
+  }
+  .sectionOne .sub-section-2 {
+    display: none;
+  }
+  .sectionTwo {
+    flex-direction: column;
+  }
+  .sectionTwo .sub-section-1 {
+    width: 90% !important;
+    font-size: 0.4rem !important;
+  }
+  .sectionTwo .sub-section-1 > div:last-child {
+    flex-direction: row !important;
+  }
+  .sectionTwo .sub-section-1 label {
+    display: none;
+  }
+  .sectionTwo .sub-section-1 input {
+    display: block !important;
+  }
+  .sectionThree .main-container {
+    grid-template-columns: repeat(2, 1fr) !important;
+  }
+}
+@media (max-width: 540px) {
+  .sectionThree .main-container {
+    grid-template-columns: 1fr !important;
+  }
+  .sectionTwo > .sub-section-2 .data {
+    background-color: red;
+    flex-direction: column;
+    gap: 50px;
+  }
+  .sectionTwo > .sub-section-2 .data > *:last-child {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80% !important;
+  }
 }/*# sourceMappingURL=Software.css.map */
