--- a/src/Styles/Started.scss
+++ b/src/Styles/Started.scss
@@ -1,12 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
-.s-main {
+.started-main {
   margin-top: 10vh;
   padding: 10px;
   max-width: 1680px;
   margin-left: auto;
   margin-right: auto;
   font-family: Roboto, san-sarif;
+
   .section-1 {
     display: flex;
     gap: 10px;
@@ -58,8 +59,25 @@
         }
       }
       & > *:nth-child(2) {
-        color: gray;
+        color: #80808085;
         text-align: center;
+        position: relative;
+        margin: 0px 30px;
+        span {
+          background-color: white;
+          padding: 10px;
+        }
+        &::before {
+          position: absolute;
+          z-index: -1;
+          content: "";
+          width: 100%;
+          left: 0;
+          height: 2px;
+          width: 100%;
+          background-color: #80808085;
+          top: calc(50% - 1px);
+        }
       }
       & .form-style {
         display: flex;
@@ -84,21 +102,21 @@
       }
     }
   }
-}
 
-button.purple {
-  padding: 20px;
-  border: 1px solid #8b00f8;
-  font-size: 1.2rem;
-  color: #8b00f8;
-  margin: 20px 30px;
-  background-color: white;
-  border-radius: 10px;
-  transition: 0.1s ease-in;
-  &:hover {
-    background-color: #8b00f8;
-    outline: 3px solid #8d00f836;
-    color: white;
+  button.purple {
+    padding: 20px;
+    border: 1px solid #8b00f8;
+    font-size: 1.2rem;
+    color: #8b00f8;
+    margin: 20px 30px;
+    background-color: white;
+    border-radius: 10px;
+    transition: 0.1s ease-in;
+    &:hover {
+      background-color: #8b00f8;
+      outline: 3px solid #8d00f836;
+      color: white;
+    }
   }
 
   button.blue {
