--- a/src/Styles/Software.scss
+++ b/src/Styles/Software.scss
@@ -165,6 +165,95 @@
       }
     }
   }
+  .sectionFour {
+    display: flex;
+    gap: 50px;
+    flex-direction: column;
+    padding: 20px 30px;
+    .sub-section-1 {
+      display: flex;
+      & > * {
+        width: 50%;
+      }
+    }
+    .sub-section-1 {
+      & > *:first-child {
+        display: flex;
+        flex-direction: column;
+        color: gray;
+        gap: 30px;
+        h2 {
+          color: #333333;
+          font-size: 3rem;
+        }
+      }
+      & > *:last-child {
+        background-color: red;
+        display: flex;
+        margin: 10px;
+      }
+    }
+    .sub-section-2 {
+      padding: 100px 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+      input[type^="checkbox"]:checked ~ .show-menu {
+        display: flex !important;
+      }
+      input[type^="checkbox"] {
+        display: none;
+      }
+      input[type^="checkbox"]:checked ~ :last-child {
+        ::after {
+          content: "Less Integration ▶";
+        }
+      }
+      & > .show-menu {
+        overflow: hidden;
+        display: none !important;
+      }
+      & > *:not(:nth-child(2), :last-child) {
+        display: flex;
+        justify-content: space-evenly;
+
+        & > * {
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-end;
+          text-align: center;
+          color: gray;
+          text-transform: capitalize;
+          font-size: 1.2rem;
+          gap: 20px;
+          width: 200px;
+          img {
+            width: 70px;
+          }
+
+          // &:nth-child(2) {
+          //   img {
+          //   }
+          // }
+          // &:last-child {
+          //   img {
+          //     width: 100%;
+          //   }
+          // }
+        }
+      }
+      & > *:last-child {
+        text-align: right;
+        label {
+          color: gray;
+          position: relative;
+          &::after {
+            content: "More Integration";
+          }
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 960px) {
