--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -12,9 +12,16 @@
 .main-hero {
     height: 100vh;
     position: relative;
-    background: blueviolet;
-    /* background-image: url('./bg.svg'); */
+    background-image: url('./bg.jpg');
     background-size: cover;
+    background-position-y: -100px;
+}
+
+.banner{
+    height: 500px;
+    position: absolute;
+    right: 20px;
+    top: calc(50% - 250px);
 }
 
 .top-content {
@@ -42,7 +49,9 @@
 .top-content h2 {
     text-transform: uppercase;
     font-weight: 300;
-    color: wheat;
+    color: maroon;
+    background: white;
+    padding: 10px;
 }
 
 .top-content h1 span {
@@ -85,7 +94,7 @@
     font-size: 1.1rem;
     font-weight: 300;
     width: 340px;
-    color: white;
+    color: black;
 }
 
 
@@ -120,7 +129,7 @@
 
 .content p:last-child span,
 .bottom-content p span {
-    background-image: linear-gradient(45deg, white, rgba(255, 255, 255, 0.226));
+    background-image: linear-gradient(45deg, maroon, rgba(255, 255, 255, 0.226));
     color: transparent;
     background-clip: text;
 }
@@ -135,13 +144,13 @@
 
 
 .main-carousel::-webkit-scrollbar {
-    background: rgba(255, 255, 255, 0.226);
+    background: rgba(128, 0, 0, 0.199);
     border-radius: 10px;
     width: 10px;
 }
 
 .main-carousel::-webkit-scrollbar-thumb {
-    background: white;
+    background: maroon;
     width: 5px;
     border-radius: 10px;
 }
@@ -152,7 +161,7 @@
     justify-content: center;
     display: flex;
     align-items: center;
-    color: rgba(255, 255, 255, 0.8);
+    color: maroon;
 }
 
 .steps {
@@ -308,10 +317,10 @@ ul {
     margin-left: 20px;
 }
 
-.right-main .content h1 {
+/* .right-main .content h1 {
     font-size: 3rem;
     color: maroon;
-}
+} */
 
 .right section img {
     width: 450px;
@@ -444,7 +453,7 @@ ul {
 
 .inquiry .main-image img {
     width: 200px;
-    height: 100px;
+    height: 170px;
     margin-bottom: 20px;
     color: maroon;
 }
