--- a/src/Styles/Swiper.css
+++ b/src/Styles/Swiper.css
@@ -1,7 +1,6 @@
 .swiper {
     margin-top: 20px;
     width: 100%;
-    height: 700px;
     padding: 20px 0;
     flex-direction: column;
 }
@@ -13,11 +12,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.swiper-slide img {
-    width: 1000px;
-    height: 100%;
 }
 
 .swiper-pagination-bullet {
@@ -36,18 +30,63 @@
     background: maroon;
 }
 
-.swiper-intro{
-    width: 100%;
-    height: 100%;
+
+.right-swiper{
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
+}
+
+.right-swiper .content{
+    display: flex;
     flex-direction: column;
-    text-transform: uppercase;
+    justify-content: start;
+    align-items: start;
+    padding-left: 20px;
     gap: 10px;
 }
-.swiper-intro h2{
-    font-size: 2rem;
+
+.right-swiper .content h3{
+    font-weight: 300;
+}
+
+.right-swiper .feature-step{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.right-swiper section img{
+    width: 300px;
+    height: 200px;
+}
+
+.feature-step span{
+    width: 50px;
+    height: 50px;
+    background: maroon;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    border-radius: 50%;
+    font-size: 1.5rem;
+    font-weight: 900;
+}
+
+.feature-step h5{
+    font-size: 1.2rem;
+    font-weight: 300;
+}
+
+.right-swiper .content h1{
+    font-weight: 900;
+    text-align: center;
+}
+
+.right-swiper .content p{
+    text-align: left;
 }
 
 .swiper-intro h3{
