--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -214,6 +214,9 @@
 }
 
 @media (max-width: 960px) {
+  .about-main {
+    padding: 10px !important;
+  }
   .section-1 > .sub-section-2 {
     flex-direction: column;
   }
@@ -228,5 +231,58 @@
   }
   .section-2 div {
     flex-direction: column;
+  }
+  .section-3 {
+    padding: 10px !important;
+    margin: 50px 0px !important;
+  }
+  .section-3 .f-line {
+    margin-top: 30px;
+    height: 70px;
+  }
+  .section-3 [class^=sub-section] > div {
+    flex-direction: column;
+  }
+  .section-3 .sub-section-1,
+  .section-3 .sub-section-2,
+  .section-3 .sub-section-3 {
+    flex-direction: column !important;
+  }
+  .section-3 .sub-section-4 {
+    flex-direction: column !important;
+  }
+  .section-3 .sub-section-4 > * {
+    width: 100% !important;
+    padding: 0px !important;
+  }
+  .section-3 .sub-section-4 > *:last-child {
+    margin: 0px auto !important;
+    width: -moz-max-content !important;
+    width: max-content !important;
+    order: 1;
+  }
+  .section-3 .sub-section-4 > *:first-child {
+    order: 2;
+  }
+  .section-5 {
+    flex-direction: column;
+  }
+  .section-5 > *:nth-child(2) {
+    height: 2px;
+    background-color: rgba(51, 51, 51, 0.4039215686);
+    margin: 20px 30px !important;
+  }
+  .section-5 > *:nth-child(2) span {
+    background-color: white;
+    margin: 0px auto;
+    padding: 10px;
+  }
+}
+@media (max-width: 540px) {
+  .section-1 .sub-section-1 {
+    width: 100% !important;
+  }
+  .section-1 .sub-section-2 > * {
+    margin: 0px !important;
   }
 }/*# sourceMappingURL=About.css.map */
